--- a/app/src/main/res/layout/activity_last.xml
+++ b/app/src/main/res/layout/activity_last.xml
@@ -1,57 +1,33 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".LastActivity"
-    android:background="@drawable/space">
-<!--    android:background="@drawable/spacebackgroundlast">-->
+    android:background="@drawable/space"
+    android:orientation="vertical"
 
+    android:layoutDirection="ltr"
+    >
+<!--    android:gravity="center"-->
 
-
-    <LinearLayout
+    <fragment
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        tools:ignore="MissingConstraints"
-        android:orientation="vertical"
-        android:gravity="center"
-        >
+        android:layout_height="wrap_content"
+        android:id="@+id/top_frag"
+        android:name="com.example.game2.fragment_top"
+        android:layout_margin="5dp"></fragment>
 
 
-        <TextView
-            android:id="@+id/textView2"
-            android:layout_width="200dp"
-            android:layout_height="60dp"
-            android:text=""
-            android:fontFamily="sans-serif-condensed"
-            android:layout_marginBottom="40dp"
-            android:textSize="30sp"
-            android:textColor="@color/colorTextTitle"
-            />
+    <fragment
+        android:layout_width="250dp"
+        android:layout_height="100dp"
+        android:id="@+id/bottom_frag"
+        android:name="com.example.game2.fragment_bottom"
+        android:layout_margin="5dp"></fragment>
 
 
-        <Button
-            android:id="@+id/playAgain"
-
-            android:layout_marginTop="30dp"
 
 
-            android:text="Play Again"
-
-            android:textColor="#FFFFFF"
-            android:textSize="30sp"
-
-            android:layout_width="270dp"
-            android:layout_height="60dp"
-            android:background="@drawable/buttonshape"
-            android:shadowColor="#A84839"
-            android:shadowDx="0"
-            android:shadowDy="0"
-            android:shadowRadius="5"
-            />
-
-
-    </LinearLayout>
-
-</androidx.constraintlayout.widget.ConstraintLayout>
+</LinearLayout>
