--- a/app/src/main/res/layout/activity_screen_start.xml
+++ b/app/src/main/res/layout/activity_screen_start.xml
@@ -9,8 +9,8 @@
     >
 
 <LinearLayout
-    android:layout_width="fill_parent"
-    android:layout_height="match_parent"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
     tools:ignore="MissingConstraints"
     android:orientation="vertical"
     android:gravity="center"
@@ -20,43 +20,38 @@
 
     <ImageView
         android:id="@+id/titleOfGgalaxyGuard"
-        android:layout_width="360dp"
-        android:layout_height="380dp"
+        android:layout_width="match_parent"
+        android:layout_height="200dp"
         app:srcCompat="@drawable/title_galaxy_guard"
         />
 
 
 
 
-
-
-
     <ImageView
+
         android:id="@+id/imageView"
         android:layout_width="130dp"
         android:layout_height="130dp"
-        app:srcCompat="@drawable/spaceship"
+        app:srcCompat="@drawable/spaceshipimproved"
         android:rotation="25"
-        android:layout_marginBottom="80dp"/>
+       />
+
+
     <Button
         android:id="@+id/startButton"
-
-        android:layout_marginTop="0dp"
-
-
         android:text="Start Game"
-
+        android:layout_marginTop="40dp"
         android:textColor="#FFFFFF"
         android:textSize="30sp"
-
+        android:textAllCaps="false"
         android:layout_width="270dp"
-        android:layout_height="60dp"
+        android:layout_height="match_parent"
         android:background="@drawable/buttonshape"
         android:shadowColor="#A84839"
         android:shadowDx="0"
         android:shadowDy="0"
         android:shadowRadius="5"
-        android:layout_marginBottom="80dp"
       />
 
 
