--- a/app/src/main/res/layout/activity_second_screen.xml
+++ b/app/src/main/res/layout/activity_second_screen.xml
@@ -10,39 +10,28 @@
 
     <LinearLayout
         android:layout_width="fill_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         tools:ignore="MissingConstraints"
         android:orientation="vertical"
         android:gravity="center"
         >
 
 
-
-
         <ImageView
             android:id="@+id/titleOfGgalaxyGuard"
-            android:layout_width="330dp"
-            android:layout_height="320dp"
-            app:srcCompat="@drawable/title_galaxy_guard"
-            />
-
-
-
-
-
+            android:layout_width="match_parent"
+            android:layout_height="224dp"
+            app:srcCompat="@drawable/title_galaxy_guard" />
 
         <Button
+            android:textAllCaps="false"
+            android:layout_marginTop="5dp"
             android:id="@+id/easyGameBtn"
-
-
-
             android:text="Easy Game"
-
             android:textColor="#FFFFFF"
             android:textSize="30sp"
-
             android:layout_width="270dp"
-            android:layout_height="60dp"
+            android:layout_height="match_parent"
             android:background="@drawable/buttonshape"
             android:shadowColor="#A84839"
             android:shadowDx="0"
@@ -50,18 +39,14 @@
             android:shadowRadius="5"
             />
         <Button
+            android:textAllCaps="false"
             android:id="@+id/HardGameBtn"
-
             android:layout_marginTop="50dp"
-
-
             android:text="Hard Game"
-
             android:textColor="#FFFFFF"
             android:textSize="30sp"
-
             android:layout_width="270dp"
-            android:layout_height="60dp"
+            android:layout_height="match_parent"
             android:background="@drawable/buttonshape"
             android:shadowColor="#A84839"
             android:shadowDx="0"
@@ -70,18 +55,15 @@
             />
 
         <Button
+            android:textAllCaps="false"
+
             android:id="@+id/sensorGameBtn"
-
             android:layout_marginTop="50dp"
-
-
             android:text="Sensor Game"
-
             android:textColor="#FFFFFF"
             android:textSize="30sp"
-
             android:layout_width="270dp"
-            android:layout_height="60dp"
+            android:layout_height="match_parent"
             android:background="@drawable/buttonshape"
             android:shadowColor="#A84839"
             android:shadowDx="0"
