--- a/app/src/main/res/layout/activity_last.xml
+++ b/app/src/main/res/layout/activity_last.xml
@@ -2,8 +2,8 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
     tools:context=".LastActivity"
     android:background="@drawable/space"
     android:orientation="vertical"
@@ -16,12 +16,14 @@
         android:layout_height="wrap_content"
         android:id="@+id/top_frag"
         android:name="com.example.game2.fragment_top"
+        android:layout_weight="1"
         android:layout_margin="5dp"></fragment>
 
 
     <fragment
-        android:layout_width="250dp"
-        android:layout_height="100dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_weight="2.5"
         android:id="@+id/bottom_frag"
         android:name="com.example.game2.fragment_bottom"
         android:layout_margin="5dp"></fragment>
