--- a/app/src/main/res/layout/fragment_top.xml
+++ b/app/src/main/res/layout/fragment_top.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="match_parent"
     android:background="@drawable/space"
     android:orientation="vertical"
     android:gravity="center"
@@ -82,6 +82,7 @@
                 android:layout_weight="1"
                 android:layout_marginBottom="1dp"
                 android:layout_marginHorizontal="1dp"
+                android:clickable="true"
 
                 />
 
@@ -122,6 +123,8 @@
                 android:layout_weight="1"
                 android:layout_marginBottom="1dp"
                 android:layout_marginHorizontal="1dp"
+                android:clickable="true"
+
 
                 />
 
@@ -163,6 +166,8 @@
                 android:layout_weight="1"
                 android:layout_marginBottom="1dp"
                 android:layout_marginHorizontal="1dp"
+                android:clickable="true"
+
 
                 />
 
